--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,22 @@ body, html {
   margin: 0;
 }
 body{
-  background-image: url("./img/bg1.jpg");
+  background-image: url("./img/bg1.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+::-webkit-scrollbar{
+  width: 12px;
+  background-color: #F5F5F5;
+}
+::-webkit-scrollbar-track{
+  background-color: #CCCCCC;
+}
+::-webkit-scrollbar-thumb{
+  background-color: royalblue;
+  background-image: -webkit-linear-gradient(90deg,transparent,rgba(0, 0, 0, 0.4) 50%,transparent,transparent)
 }
 
 /* nav bar */
